feat(build): added a way to generate standalone jar file